# TSIP_Auditor

./: .gitignore  README.md  __init__ (2).py  __init__ (4).py  audit_report_template.docx  build_report_template.py  cli.py  download  ecs_formatter.py  parser.py  pyproject.toml  reporter.py  requirements.txt  rules.yaml  rules_engine.py  sdp.py  test_cli.py  test_parser.py  test_sdp.py
