[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivsa"
version = "1.0.0"
description = "Interop Validation & Security Automator - audit de conformité et de sécurité des Trunks SIP ToIP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pyshark>=0.6,<0.7",
    "scapy>=2.7,<3.0",
    "pydantic>=2.11,<3.0",
    "PyYAML>=6.0,<7.0",
    "python-docx>=1.2,<2.0",
    "docxtpl>=0.20,<0.21",
    "Jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<10.0"]

[project.scripts]
ivsa = "ivsa.cli:main"

[tool.setuptools.packages.find]
include = ["ivsa*"]

[tool.setuptools.package-data]
ivsa = ["config/*.yaml", "templates/*.docx"]
